fix: show meta key hint and show how many entries and sets will updated

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -489,7 +489,7 @@ resources_box_batch_actions_removefromset,Aus Set entfernen,Remove from set,
 resources_box_batch_actions_sets_managepermissions,Berechtigungen von Sets editieren,Edit permissions for sets,
 resources_box_batch_actions_transfer_responsibility_entries,Verantwortlichkeit von Medieneinträgen übertragen,Transfer responsibility of media entries,
 resources_box_batch_actions_transfer_responsibility_sets,Verantwortlichkeit von Sets übertragen,Transfer responsibility of sets,
-resources_box_batch_actions_meta_data_batch_new,NEU:,NEW:,
+resources_box_batch_actions_meta_data_batch_new,BETA:,BETA:,
 resources_box_batch_actions_meta_data_batch,Metadaten Stapelverarbeitung,Metadata Batch Processing,
 resources_box_deselect_all,Alle abwählen,Deselect all,
 resources_box_filter,Filtern,Filter,
@@ -517,8 +517,8 @@ resources_box_batch_mandatory_field_for_media_entry,Pflichtfeld für Medieneintr
 resources_box_batch_field_only_for_sets,Dieser Wert wird nur auf Sets angewendet,This value is applied only on sets,
 resources_box_batch_field_only_for_entries,Dieser Wert wird nur auf Medieneinträge angewendet,This value is applied only on media entries,
 resources_box_batch_load_all_pages,Es werden alle Inhalte geladen...,Loading all content...,
-resources_box_batch_apply_on_all_1,Auf alle Inhalte ,Apply on all ,
-resources_box_batch_apply_on_all_2, anwenden, entries,
+resources_box_batch_apply_on_all_1,Auf alle ,Apply on all ,
+resources_box_batch_apply_on_all_2, Inhalte anwenden, entries,
 resources_box_batch_apply_on_selected_1,Auf ,Apply on ,
 resources_box_batch_apply_on_selected_2, Inhalte anwenden, entries,
 resources_box_batch_all_content,Alle Inhalte,All content,
@@ -527,6 +527,8 @@ resources_box_batch_stats_total,Total:,Total:,
 resources_box_batch_stats_where_loaded,davon geladen:,loaded:,
 resources_box_batch_stats_where_editable,davon editierbar:,editable:,
 resources_box_batch_stats_where_selected,selektiert:,selected:,
+resources_box_batch_stats_entries,Einträge,Entries,
+resources_box_batch_stats_collections,Sets,Sets,
 resources_box_batch_fill_in_all_fields_hint,Bitte füllen Sie alle Felder aus oder schliessen Sie Felder ohne Eingaben. Sonst können Sie ihre Eingaben nicht speichern.,Please fill in all fields or remove the ones without data. Otherwise you cannot save the data.,
 resources_box_batch_please_wait_and_done_leave,Bitte warten und die Ansicht nicht verlassen.,Please wait and do not leave this page.,
 resources_box_batch_loading_stats_total," total, "," total, ",
