fix: improve hints for user in box batch form

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -514,6 +514,7 @@ resources_box_batch_close,schliessen,close,
 resources_box_batch_mandatory_fields,Pflichtfelder:,Mandatory fields:,
 resources_box_batch_mandatory_field,Pflichtfeld,Mandatory field,
 resources_box_batch_mandatory_field_for_media_entry,Pflichtfeld für Medieneinträge,Mandatory field for media entries,
+resources_box_batch_field_only_for_entries_and_sets,Dieser Wert wird auf Medieneinträge und auf Sets angewendet,This value is applied on media entries and on sets,
 resources_box_batch_field_only_for_sets,Dieser Wert wird nur auf Sets angewendet,This value is applied only on sets,
 resources_box_batch_field_only_for_entries,Dieser Wert wird nur auf Medieneinträge angewendet,This value is applied only on media entries,
 resources_box_batch_load_all_pages,Es werden alle Inhalte geladen...,Loading all content...,
@@ -527,7 +528,7 @@ resources_box_batch_stats_total,Total:,Total:,
 resources_box_batch_stats_where_loaded,davon geladen:,loaded:,
 resources_box_batch_stats_where_editable,davon editierbar:,editable:,
 resources_box_batch_stats_where_selected,selektiert:,selected:,
-resources_box_batch_stats_entries,Einträge,Entries,
+resources_box_batch_stats_entries,Medieneinträge,Media Entries,
 resources_box_batch_stats_collections,Sets,Sets,
 resources_box_batch_fill_in_all_fields_hint,Bitte füllen Sie alle Felder aus oder schliessen Sie Felder ohne Eingaben. Sonst können Sie ihre Eingaben nicht speichern.,Please fill in all fields or remove the ones without data. Otherwise you cannot save the data.,
 resources_box_batch_please_wait_and_done_leave,Bitte warten und die Ansicht nicht verlassen.,Please wait and do not leave this page.,
