--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -187,6 +187,8 @@ dynamic_filters_authorization,Berechtigung,Authorization,
 dynamic_filters_visibility,Sichtbarkeit,Accessability,
 dynamic_filters_visibility_private,Nur für mich,Only for me,
 dynamic_filters_visibility_user_or_group,Geteilt mit Personen und Arbeitsgruppen,Shared with people and work groups,
+dynamic_filters_person_header,Persons,Persons,
+dynamic_filters_role_header,Rollen,Roles,
 edit_custom_urls_back_to_collection,Zurück zum Set,Back to the set,
 edit_custom_urls_back_to_media_entry,Zurück zum Medieneintrag,Back to the media entry,
 edit_custom_urls_cancel,Abbrechen,Cancel,
@@ -371,6 +373,7 @@ meta_data_input_keywords_existing,Schlagwort ist bereits vergeben.,Keyword alrea
 meta_data_input_new_group_add,Arbeitsgruppe einfügen,Add work group,
 meta_data_input_new_person_add,Person einfügen,Add person,
 meta_data_input_new_person_toggle,Neue Person oder Gruppe anlegen,Add new person or work group,
+meta_data_input_person_save,Speichern,Save,
 meta_data_meta_key_label,Schlüssel,Key,
 meta_data_type_label,Typ,Type,
 meta_data_value_label,Wert,Data,
