i18n: Uploader: translate upload status

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -291,6 +291,13 @@ media_entry_file_format_not_supported_3,exportieren.,0,
 media_entry_file_information_title,Datei,File information,
 media_entry_media_import_gotodrafts,Medieneinträge vervollständigen,Complete media entries,
 media_entry_media_import_header,Medien importieren,Media upload,
+media_entry_media_import_box_header_a,,,
+media_entry_media_import_box_header_b, Upload(s), Upload(s),
+media_entry_media_import_box_upload_status_waiting,Warten…,Waiting…,
+media_entry_media_import_box_upload_status_error,Fehler!,Error!,
+media_entry_media_import_box_upload_status_progress_a,"Hochladen… ","Uploading… ",
+media_entry_media_import_box_upload_status_progress_b,"%","%",
+media_entry_media_import_box_upload_status_processing,Verarbeiten…,Processing…,
 media_entry_media_import_inside,Dateien auf dieses Feld ziehen oder ,Add files by drag and drop in this field or ,
 media_entry_media_import_inside_nojs,Dateien auswählen,Select files,
 media_entry_media_import_notes_msg,"Bilder (TIFF, JPEG, PNG) sowie Audio- und Videofiles in den gängigsten Formaten werden direkt verarbeitet und dargestellt. Bilder im CMYK-Farbraum werden nicht korrekt dargestellt. Wandeln Sie diese vor dem Importieren in RGB um.","Images (TIFF, JPEG, PNG) and audio/video files in the most common formats are processed and displayed directly. Images in the CMYK color model cannot be displayed correctly, please convert to RGB before uploading.",
