--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -187,7 +187,7 @@ dynamic_filters_authorization,Berechtigung,Authorization,
 dynamic_filters_visibility,Sichtbarkeit,Accessability,
 dynamic_filters_visibility_private,Nur für mich,Only for me,
 dynamic_filters_visibility_user_or_group,Geteilt mit Personen und Arbeitsgruppen,Shared with people and work groups,
-dynamic_filters_person_header,Persons,Persons,
+dynamic_filters_person_header,Personen,Persons,
 dynamic_filters_role_header,Rollen,Roles,
 edit_custom_urls_back_to_collection,Zurück zum Set,Back to the set,
 edit_custom_urls_back_to_media_entry,Zurück zum Medieneintrag,Back to the media entry,
@@ -375,13 +375,13 @@ meta_data_input_new_person_add,Person einfügen,Add person,
 meta_data_input_new_person_toggle,Neue Person oder Gruppe anlegen,Add new person or work group,
 meta_data_input_person_save,Speichern,Save,
 meta_data_meta_key_label,Schlüssel,Key,
-meta_data_role_add_another_btn,Add another role,Add another role,
-meta_data_role_add_btn,Add a role,Add a role,
-meta_data_role_add_heading,Add a role to,Add a role to,
-meta_data_role_choose_label,Choose the role,Choose the role,
-meta_data_role_edit_btn,Edit role,Edit role,
-meta_data_role_edit_heading,Edit the role of,Edit the role of,
-meta_data_role_remove_btn,Remove role,Remove role,
+meta_data_role_add_another_btn,Weitere Rolle hinzufügen,Add another role,
+meta_data_role_add_btn,Rolle hinzufügen,Add a role,
+meta_data_role_add_heading,Rolle hinzufügen zu ,Add a role to,
+meta_data_role_choose_label,Rolle auswählen,Choose the role,
+meta_data_role_edit_btn,Rolle bearbeiten,Edit role,
+meta_data_role_edit_heading,Rolle bearbeiten,Edit the role of,
+meta_data_role_remove_btn,Rolle entfernen,Remove role,
 meta_data_type_label,Typ,Type,
 meta_data_value_label,Wert,Data,
 meta_key_order_alphabetical,a-z,a-z,
