add missing translations

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -375,6 +375,13 @@ meta_data_input_new_person_add,Person einfügen,Add person,
 meta_data_input_new_person_toggle,Neue Person oder Gruppe anlegen,Add new person or work group,
 meta_data_input_person_save,Speichern,Save,
 meta_data_meta_key_label,Schlüssel,Key,
+meta_data_role_add_another_btn,Add another role,Add another role,
+meta_data_role_add_btn,Add a role,Add a role,
+meta_data_role_add_heading,Add a role to,Add a role to,
+meta_data_role_choose_label,Choose the role,Choose the role,
+meta_data_role_edit_btn,Edit role,Edit role,
+meta_data_role_edit_heading,Edit the role of,Edit the role of,
+meta_data_role_remove_btn,Remove role,Remove role,
 meta_data_type_label,Typ,Type,
 meta_data_value_label,Wert,Data,
 meta_key_order_alphabetical,a-z,a-z,
