chore: lint translations

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -297,8 +297,8 @@ media_entry_media_import_box_header_a,,,
 media_entry_media_import_box_header_b, Upload(s), Upload(s),
 media_entry_media_import_box_upload_status_waiting,Warten…,Waiting…,
 media_entry_media_import_box_upload_status_error,Fehler!,Error!,
-media_entry_media_import_box_upload_status_progress_a,"Hochladen… ","Uploading… ",
-media_entry_media_import_box_upload_status_progress_b,"%","%",
+media_entry_media_import_box_upload_status_progress_a,Hochladen… ,Uploading… ,
+media_entry_media_import_box_upload_status_progress_b,%,%,
 media_entry_media_import_box_upload_status_processing,Verarbeiten…,Processing…,
 media_entry_media_import_inside,Dateien auf dieses Feld ziehen oder ,Add files by drag and drop in this field or ,
 media_entry_media_import_inside_nojs,Dateien auswählen,Select files,
@@ -557,8 +557,8 @@ resources_box_batch_please_wait_and_done_leave,Bitte warten und die Ansicht nich
 resources_box_batch_loading_stats_total," total, "," total, ",
 resources_box_batch_loading_stats_applying," am speichern, "," are saving, ",
 resources_box_batch_loading_stats_pending," am warten, "," are waiting, ",
-resources_box_batch_loading_stats_done," sind fertig"," are done",
-resources_box_batch_loading_stats_failed," fehlgeschlagen"," failed",
+resources_box_batch_loading_stats_done, sind fertig, are done,
+resources_box_batch_loading_stats_failed, fehlgeschlagen, failed,
 resources_box_batch_cancel_waiting,wartende abbrechen,cancel waiting,
 resources_box_batch_processing_successful, erfolgreich verarbeitet, successfully processed,
 resources_box_batch_ignore_failures,Fehler ignorieren,Ignore failures,
@@ -643,7 +643,7 @@ confidential_links_create_set_expiration_date,Ablaufdatum einstellen,Set expirat
 confidential_links_create_cancel,Abbrechen,Cancel,
 confidential_links_created_title,Neuer Vertraulicher Link erstellt,New Confidential Link created,
 confidential_links_created_back_btn,Zurück zu allen Vertraulichen Links,Go back to all Confidential Links,
-confidential_links_created_notice,"Vertraulicher Link erstellt!","Confidential Link was created!",
+confidential_links_created_notice,Vertraulicher Link erstellt!,Confidential Link was created!,
 confidential_links_show_link_for_copy,Link zum kopieren:,Link to copy:,
 confidential_links_show_embedcode_for_copy,Embed-Code zum kopieren:,Embed-Code to copy:,
 confidential_links_list_created_hint_pre,Erstellt: ,Created: ,
@@ -652,7 +652,7 @@ confidential_links_list_no_expiry,Nie,Never,
 confidential_links_list_new_button,Neuen Vertraulichen Link erstellen,Add a new Confidential Link,
 confidential_links_list_no_description,(Keine Beschreibung),(No description),
 confidential_links_list_revoke_btn_hint,Vertraulichen Link zurückziehen,Revoke Confidential Link,
-confidential_links_list_revoke_confirm,"Sind Sie sicher, dass Sie diesen Vertraulichen Link zurückziehen wollen?","Are you sure you want to revoke this Confidential Link?",
+confidential_links_list_revoke_confirm,"Sind Sie sicher, dass Sie diesen Vertraulichen Link zurückziehen wollen?",Are you sure you want to revoke this Confidential Link?,
 confidential_links_list_revoked_title,Abgelaufene und zurückgezogene Vertrauliche Links,Expired and revoked Confidential Links,
 confidential_links_list_show_url,Link anzeigen,Show Link,
 confidential_links_list_copy_url,Vertraulichen Link kopieren,Copy Confidential Link,
