fix: Confidential Links text fixes

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -631,7 +631,13 @@ sitemap_my_used_keywords,Schlagworte,Keywords,
 sitemap_search,Suche,Search,
 sitemap_tokens,Tokens,Tokens,
 sitemap_vocabularies,Vokabulare,Vocabularies,
+confidential_links_help_title,Hinweise,Hints,
 sitemap_vocabulary,Vokabular,Vocabulary,
+confidential_links_help_text,"Vertrauliche Links ermöglichen den direkten Zugriff auf Medieneinträge, auch wenn sie nicht öffentlich sichtbar sind.
+Diese Links ermöglichen somit auch Benutzern ohne Login einen Zugang zum Medieneintrag. Binden Sie Vertrauliche Links nicht in öffentlich zugängliche Webseiten ein, sonst werden die regulären Zugriffsberechtigungen wirkungslos.
+Vertrauliche Links können nur vom Verantwortlichen eines Medieneintrags erstellt und zurückgezogen werden. Die Links können mit einem Verfallsdatum erstellt oder zeitlich unbeschränkt erstellt werden.","Confidential Links can be used to enable access to Entries without making them publicly visible.
+These Links therefore also make it possible to share Entries with Users that don't have a login. Please do not share or embed Confidential Links onto publicly accessible websites, because it would render the regular permission settings useless.
+Confidential Links can only be created by the responsible user of an Entry. They can be manually revoked at any time, and optionally be set to expire automatically after a set day.",
 confidential_links_header,Vertrauliche Links,Confidential Links,
 confidential_links_title_pre,Vertrauliche Links für ,Confidential Links for ,
 confidential_links_title_post,Zurück zum Set,Back to the set,
@@ -651,7 +657,7 @@ confidential_links_list_expires_hint_pre,Ablaufdatum: ,Expiration date: ,
 confidential_links_list_no_expiry,Nie,Never,
 confidential_links_list_new_button,Neuen Vertraulichen Link erstellen,Add a new Confidential Link,
 confidential_links_list_no_description,(Keine Beschreibung),(No description),
-confidential_links_list_revoke_btn_hint,Vertraulichen Link zurückziehen,Revoke Confidential Link,
+confidential_links_list_revoke_btn_hint,Zurückziehen,Revoke,
 confidential_links_list_revoke_confirm,"Sind Sie sicher, dass Sie diesen Vertraulichen Link zurückziehen wollen?",Are you sure you want to revoke this Confidential Link?,
 confidential_links_list_revoked_title,Abgelaufene und zurückgezogene Vertrauliche Links,Expired and revoked Confidential Links,
 confidential_links_list_show_url,Link anzeigen,Show Link,
@@ -662,6 +668,7 @@ confidential_links_head_token,Token,Token,
 confidential_links_head_valid_since,Erstellt am,Created at,
 confidential_links_head_valid_until,Läuft ab,Expires at,
 confidential_links_show_title,Vertraulicher Link,Confidential Link,
+confidential_links_access_notice,Dieser Medieneintrag wurde über einen Vertraulichen Link aufgerufen. Die URL dieser Seite darf nur einem eingeschränkten Personenkreis zugänglich sein.,This Entry was accessed via a Confidential Link. The URL of this page shall only be made accessible to a limited group of people.,
 transfer_responsibility_batch_success_collection_1,Sie haben für ,You have successfully transferred responsibility for ,
 transfer_responsibility_batch_success_collection_1a, Set , set ,
 transfer_responsibility_batch_success_collection_1b, Sets , sets ,
