feat: multiple external uris for keywords and people
for people, decorate known "authority control" links, for example a Library of Congress unique ID for a person.

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -436,6 +436,8 @@ permissions_table_title,Zugriffsberechtigungen,Permissions,
 permissions_transfer_responsibility_link,Verantwortlichkeit übertragen,Transfer responisibility,
 person_show_description,Beschreibung,Description,
 person_show_external_uri,URI,URI,
+person_show_external_uris,URIs,URIs,
+person_show_external_uri_authority_control,Normdaten,Authority Control Data,
 person_show_first_name,Vorname,First name,
 person_show_last_name,Nachname,Last name,
 picture_alt_fallback,(unbekannt),(unkown),
@@ -730,6 +732,7 @@ vocabulary_term_info_description,Beschreibung,Description,
 vocabulary_term_info_rdfclass,Typ,Type,
 vocabulary_term_info_term,Begriff,Term,
 vocabulary_term_info_url,URL,URL,
+vocabulary_term_info_urls,URLs,URLs,
 workgroup_link_to_contents_text,Inhalte,Items,
 workgroup_link_to_contents_title,Inhalte dieser Arbeitsgruppe anzeigen,Show items of this work group,
 workgroup_members_table_is_member,Mitglied?,Member?,
