ui: PersonShow: separate listing of external URIs with authority control

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -435,9 +435,8 @@ permissions_table_save_btn,Speichern,Save,
 permissions_table_title,Zugriffsberechtigungen,Permissions,
 permissions_transfer_responsibility_link,Verantwortlichkeit übertragen,Transfer responisibility,
 person_show_description,Beschreibung,Description,
-person_show_external_uri,URI,URI,
-person_show_external_uris,URIs,URIs,
-person_show_external_uri_authority_control,Normdaten,Authority Control Data,
+person_show_external_uris,Links,Links,
+person_show_external_uris_autority_control,Normdaten,Authority Control Data,
 person_show_first_name,Vorname,First name,
 person_show_last_name,Nachname,Last name,
 picture_alt_fallback,(unbekannt),(unkown),
