--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -453,7 +453,7 @@ permissions_table_edit_btn,Bearbeiten,Edit,
 permissions_table_remove_subject_btn,Berechtigung entfernen,Remove permission,
 permissions_table_save_btn,Speichern,Save,
 permissions_table_title,Zugriffsberechtigungen,Permissions,
-permissions_transfer_responsibility_link,Verantwortlichkeit übertragen,Transfer responisibility,
+permissions_transfer_responsibility_link,Verantwortlichkeit übertragen,Transfer responsibility,
 person_show_description,Beschreibung,Description,
 person_show_external_uris,Links,Links,
 person_show_external_uris_autority_control,Normdaten,Authority Control Data,
@@ -754,6 +754,53 @@ vocabulary_term_info_rdfclass,Typ,Type,
 vocabulary_term_info_term,Begriff,Term,
 vocabulary_term_info_url,URL,URL,
 vocabulary_term_info_urls,URLs,URLs,
+workflow_edit_actions_back,Zurück,Go back,
+workflow_edit_actions_cancel,Abbrechen,Cancel,
+workflow_edit_actions_delete,X,X,
+workflow_edit_actions_validate,Prüfen,Check,
+workflow_edit_actions_validating,Prüfen…,Checking…,
+workflow_edit_actions_fill_data,Daten eingeben,Fill Data,
+workflow_edit_actions_processing,Formular aufrufen…,Processing…,
+workflow_edit_actions_save,Speichern,Save,
+workflow_edit_add_md_by_metakey,Hinzufügen,Add,
+workflow_edit_adder_meta_key_already_used,Metadatum wird schon verwendet,Metakey already used,
+workflow_owners_title,Workflow-Besitzer,Workflow owners,
+workflow_feature_title,Workflow,Workflow,
+workflow_associated_collections_title,Set mit Inhalten,Set with content,
+workflow_associated_collections_explain,In diesem Workflow-Set enthaltene Medieneinträge und Sets können bis zum Abschluss nur als Teil dieses Workflows bearbeitet werden.,Content contained in this workflow-set may only be edited until this workflow will be finished.,
+workflow_associated_collections_upload,Medien hinzufügen,Add media,
+workflow_common_settings_title,Gemeinsamer Datensatz,Common data,
+workflow_common_settings_explain,Folgende Angaben und Einstellungen gelten für alle enthaltenen Medieneinträge und Sets und werden mit Abschluss des Workflows permanent angewendet.,These data and settings apply to all contents and are permanently applied at the end of the process.,
+workflow_common_settings_permissions_title,Berechtigungen,Permissions,
+workflow_common_settings_permissions_responsible,Verantwortliche Person(en),Responsible user,
+workflow_common_settings_permissions_write,Schreib- und Leserechte,Read and write permissions,
+workflow_common_settings_permissions_read,Nur Leserechte,Only reading permissions,
+workflow_common_settings_permissions_read_public,Öffentlicher Zugriff (Internet),Public access (Internet),
+workflow_common_settings_permissions_select_user,Nutzer/innen auswählen,Select user,
+workflow_common_settings_permissions_add_user,Nutzer/innen hinzufügen,Add user,
+workflow_common_settings_permissions_add_group,Gruppe hinzufügen,Add group,
+workflow_common_settings_permissions_add_api_client,API-Client hinzufügen,Add API-Client,
+workflow_common_settings_metadata_title,Meta-Daten,MetaData,
+workflow_preview_actions_back,Zurück,Go back,
+workflow_preview_actions_finish,Abschliessen,Finish,
+workflow_preview_actions_finishing,Abschliessen…,Finish…,
+workflow_preview_actions_save_data,Daten speichern,Save data,
+workflow_preview_actions_saving,Daten speichern…,Saving…,
+workflow_preview_consists_of_prefix,enthält,consists of,
+workflow_preview_consists_of_and,und,and,
+workflow_preview_consists_of_media_entries,Medieneinträge,Media entries,
+workflow_preview_consists_of_collections,Sets,Sets,
+workflow_preview_errors_found,Fehler gefunden,error(s) found,
+workflow_preview_header,Workflow-Vorschau,Preview of workflow ,
+workflow_preview_resources_header,Medienteinträge und Sets,Media entries and Sets,
+workflow_preview_finish_confirmation,Wollen Sie den Workflow abschliessen? Diese Aktion kann nicht rückgängig gemacht werden!,You're about to finish the workflow. This action cannot be undone. Do you want to proceed?,
+workflow_preview_summary_text_part_1,Folgende Angaben werden auf alle Medieneinträge und Sets angewendet enthalten im Workflow-Set,Following settings will apply to everything contained in the Set,
+workflow_preview_summary_text_part_2,Enthalten,Contained,
+workflow_preview_value_managed_by,Diese Angabe wird verwaltet vom Workflow,This value is managed by workflow,
+workflows_index_actions_edit,Bearbeiten,Edit,
+workflows_index_actions_new,Neuer Workflow,New workflow,
+workflows_index_actions_show,Details anzeigen,Show details,
+workflows_index_header,Meine Workflows,My Workflows,
 workgroup_link_to_contents_text,Inhalte,Items,
 workgroup_link_to_contents_title,Inhalte dieser Arbeitsgruppe anzeigen,Show items of this work group,
 workgroup_members_table_is_member,Mitglied?,Member?,
