ui: translate flash messages

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -33,7 +33,13 @@ api_tokens_list_scope_read,Lesen,Read,
 api_tokens_list_scope_write,Schreiben,Write,
 app_autocomplete_no_results,Keine Ergebnisse.,No results.,
 app_confirm_form_leave_msg,"Diese Seite bittet Sie zu bestätigen, dass Sie die Seite verlassen möchten. Daten, die Sie eingegeben haben, werden unter Umständen nicht gespeichert.",Please confirm that you wish to leave this page – entered data might not be saved.,NOTE: German version copied from Firefox default message
+app_notice_admin_mode_on,Admin-Modus aktiviert!,Admin mode activated!,
+app_notice_admin_mode_off,Admin-Modus deaktiviert!,Admin mode deactivated!,
+app_notice_logged_in,Sie haben sich angemeldet.,You have logged in.,
 app_notice_logged_out,Sie haben sich abgemeldet.,You have logged out.,
+app_notice_wrong_credentials,Falscher Benutzername/Passwort.,Incorrect username/password.,
+app_notice_shibboleth_not_enabled,Die Anmeldung mittels Shibboleth ist nicht aktiviert!,Shibboleth sign in is not enabled!,
+app_notice_shibboleth_missing_fields,Die Authentifizierungsdaten von Shibboleth sind unvollständig. SURNAME, GIVENNAME und EMAIL sind Pflichtfelder!,Shibboleth authentication data is incomplete. SURNAME, GIVENNAME and EMAIL are required fields!,
 app_warning_jsonly,"Diese Funktion erfordert JavaScript, aber es ist nicht aktiviert.","This feature requires Javascript, but it is not activated.",
 authentication_groups,Systemgruppen,System groups,
 batch_add_to_collection_hint,"Nach Sets suchen, zu denen Sie die Medieneinträge hinzufügen möchten.",Seach for sets to add media entries.,
