--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -39,7 +39,7 @@ app_notice_logged_in,Sie haben sich angemeldet.,You have logged in.,
 app_notice_logged_out,Sie haben sich abgemeldet.,You have logged out.,
 app_notice_wrong_credentials,Falscher Benutzername/Passwort.,Incorrect username/password.,
 app_notice_shibboleth_not_enabled,Die Anmeldung mittels Shibboleth ist nicht aktiviert!,Shibboleth sign in is not enabled!,
-app_notice_shibboleth_missing_fields,Die Authentifizierungsdaten von Shibboleth sind unvollständig. SURNAME, GIVENNAME und EMAIL sind Pflichtfelder!,Shibboleth authentication data is incomplete. SURNAME, GIVENNAME and EMAIL are required fields!,
+app_notice_shibboleth_missing_fields,"Die Authentifizierungsdaten von Shibboleth sind unvollständig. SURNAME, GIVENNAME und EMAIL sind Pflichtfelder!","Shibboleth authentication data is incomplete. SURNAME, GIVENNAME and EMAIL are required fields!",
 app_warning_jsonly,"Diese Funktion erfordert JavaScript, aber es ist nicht aktiviert.","This feature requires Javascript, but it is not activated.",
 authentication_groups,Systemgruppen,System groups,
 batch_add_to_collection_hint,"Nach Sets suchen, zu denen Sie die Medieneinträge hinzufügen möchten.",Seach for sets to add media entries.,
