i18n: rename "Roles" to "Functions"
copied from https://github.com/Madek/madek/issues/193

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -385,13 +385,13 @@ meta_data_input_new_person_pseudonym,Pseudonym,Pseudonym,
 meta_data_input_new_person_toggle,Neue Person oder Gruppe anlegen,Add new person or work group,
 meta_data_input_person_save,Speichern,Save,
 meta_data_meta_key_label,Schlüssel,Key,
-meta_data_role_add_another_btn,Weitere Rolle hinzufügen,Add another role,
-meta_data_role_add_btn,Rolle hinzufügen,Add a role,
-meta_data_role_add_heading,Rolle hinzufügen zu ,Add a role to,
-meta_data_role_choose_label,Rolle auswählen,Choose the role,
-meta_data_role_edit_btn,Rolle bearbeiten,Edit role,
-meta_data_role_edit_heading,Rolle bearbeiten,Edit the role of,
-meta_data_role_remove_btn,Rolle entfernen,Remove role,
+meta_data_role_add_another_btn,Weitere Funktion hinzufügen,Add another function,
+meta_data_role_add_btn,Funktion hinzufügen,Add a function,
+meta_data_role_add_heading,Funktion hinzufügen zu ,Add a function to,
+meta_data_role_choose_label,Funktion auswählen,Choose the function,
+meta_data_role_edit_btn,Funktion bearbeiten,Edit function,
+meta_data_role_edit_heading,Funktion bearbeiten,Edit the function of,
+meta_data_role_remove_btn,Funktion entfernen,Remove function,
 meta_data_type_label,Typ,Type,
 meta_data_value_label,Wert,Data,
 meta_key_order_alphabetical,a-z,a-z,
