fix: i18n: rename "Roles" to "Functions"

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -194,7 +194,7 @@ dynamic_filters_visibility,Sichtbarkeit,Accessability,
 dynamic_filters_visibility_private,Nur für mich,Only for me,
 dynamic_filters_visibility_user_or_group,Geteilt mit Personen und Arbeitsgruppen,Shared with people and work groups,
 dynamic_filters_person_header,Personen,Persons,
-dynamic_filters_role_header,Rollen,Roles,
+dynamic_filters_role_header,Funktionen,Functions,
 edit_custom_urls_back_to_collection,Zurück zum Set,Back to the set,
 edit_custom_urls_back_to_media_entry,Zurück zum Medieneintrag,Back to the media entry,
 edit_custom_urls_cancel,Abbrechen,Cancel,
