embeds: show error messages in iframe

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -210,6 +210,14 @@ edit_custom_urls_title,Anforderungen,Requirements,
 edit_custom_urls_transfer,Übertragen,Transfer,
 edit_custom_urls_transfer_hint,"Eine bereits bestehende Adresse kann von einem Medieneintrag auf einen anderen oder von einem Set auf ein anderes übertragen werden. Bestehende Adressen können nicht von einem Medieneintrag auf ein Set und umgekehrt übertragen werden. Wollen Sie eine Adresse übertragen, dann geben Sie diese hier ein. Sie müssen für beide Inhalte über die Zugriffsberechtigung 'Verwalten' verfügen.","An existing address can be transferred from one media entry to another or from one set to another. Existing addresses cannfot be transferred from a media entry to a set or vice versa. If you want to transfer an address, please enter this address here. You have to have manage permissions for both items.",
 edit_custom_urls_transfer_title,Übertragen,Transfer,
+embed_error_title,"Fehler!","Error!",
+embed_error_context_pre,"Angeforderte URL: ","Requested URL: ",
+embed_error_context_post,"","",
+embed_error_help_pre,"Hilfe: ","Help: ",
+embed_error_help_post,"","",
+embed_error_msg,"Dieser Inhalt kann nicht eingebettet werden.","This content cannot be embedded.",
+embed_error_msg_403,"Dieser Inhalt kann nicht eingebettet werden, weil die nötigen Berechtigungen fehlen.","This content cannot be embedded because the necessary permissions are missing.",
+embed_error_msg_404,"Der gewünschte Inhalt konnte nicht gefunden werden.","The requested content could not be found.",
 error_401_title,"Um Zugang zu diesem Bereich zu erhalten, melden Sie sich bitte an.",To get access please login below with your user data.,
 error_403_message,Bitte kontaktieren Sie die für den Medieneintrag oder das Sets verantwortliche Person.,Please contact the responsible user who has the right alllow access.,
 error_403_title,Sie haben keine Zugriffsrechte für diesen Inhalt.,You don’t have the necessary permissions to access this resource.,
