--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -393,6 +393,8 @@ meta_data_input_new_person_last_name,Nachname,Last name,
 meta_data_input_new_person_pseudonym,Pseudonym,Pseudonym,
 meta_data_input_new_person_toggle,Neue Person oder Gruppe anlegen,Add new person or work group,
 meta_data_input_person_save,Speichern,Save,
+meta_data_input_json_err_prefix,Eingabefehler: ,Input error: ,
+meta_data_input_json_err_no_object,Wert ist nicht vom Typ 'Object'!,Value is not an 'Object'!,
 meta_data_meta_key_label,Schlüssel,Key,
 meta_data_role_add_another_btn,Weitere Funktion hinzufügen,Add another function,
 meta_data_role_add_btn,Funktion hinzufügen,Add a function,
