ui: beautify MetaDatum::JSON display, link to API

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -405,6 +405,7 @@ meta_data_role_edit_heading,Funktion bearbeiten,Edit the function of,
 meta_data_role_remove_btn,Funktion entfernen,Remove function,
 meta_data_type_label,Typ,Type,
 meta_data_value_label,Wert,Data,
+meta_datum_json_download_value,Link zu diesem Datensatz,Link to this dataset,
 meta_key_order_alphabetical,a-z,a-z,
 meta_key_order_alphabetical_hint,Die Schlagworte dieses Metadatenfeldes sind alphabetisch sortiert.,The keywords of this metakey are sorted alphabetically.,
 meta_key_order_custom,redaktionell,editorial,
