feat: MetaDatum::MediaEntry

--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -407,6 +407,11 @@ meta_data_role_remove_btn,Funktion entfernen,Remove function,
 meta_data_type_label,Typ,Type,
 meta_data_value_label,Wert,Data,
 meta_datum_json_download_value,Link zu diesem Datensatz,Link to this dataset,
+meta_datum_media_entry_label_id,Ressourcen-ID:,Resource ID:,
+meta_datum_media_entry_label_string,Zusatztext:,additional text:,
+meta_datum_media_entry_err_uuid_invalid,Ungültige UUID!,Invalid UUID!,
+meta_datum_media_entry_value_unauthorized,Hinweis: Sie haben keinen Zugriff auf diese Ressource!,Notice: You do not have access to this resource!,
+meta_datum_media_entry_value_not_found,Hinweis: Diese Ressource konnte nicht (mehr) gefunden werden!,Notice: This resource could not be found (anymore)!,
 meta_key_order_alphabetical,a-z,a-z,
 meta_key_order_alphabetical_hint,Die Schlagworte dieses Metadatenfeldes sind alphabetisch sortiert.,The keywords of this metakey are sorted alphabetically.,
 meta_key_order_custom,redaktionell,editorial,
